--- a/app/src/main/res/layout/tab_gameset1.xml
+++ b/app/src/main/res/layout/tab_gameset1.xml
@@ -9,5 +9,7 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="14dp"
+        android:textColor="@color/black"
         />
 </LinearLayout>
