--- a/app/src/main/res/layout/fragment_find_game.xml
+++ b/app/src/main/res/layout/fragment_find_game.xml
@@ -6,14 +6,12 @@
     tools:context="com.yijian.dzpoker.activity.game.fragment.FindGameFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:text="发现游戏" />-->
 
-       <!--<ImageView-->
-           <!--android:layout_width="match_parent"-->
-           <!--android:layout_height="match_parent"-->
-           <!--android:src="@drawable/default_male_head"/>-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/game_and_matched_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
