--- a/app/src/main/res/layout/activity_add_into_club.xml
+++ b/app/src/main/res/layout/activity_add_into_club.xml
@@ -60,6 +60,8 @@
             android:hint="俱乐部名/俱乐部ID"
             android:imeOptions="actionSearch"
             android:inputType="text"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
             android:maxLines="1"
             android:textSize="16sp" />
 
